# QuickRollCall

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  qrCode.py  qrRouters.py
api/: attendRouters.py  config.py  dependencies.py  exceptions.py  logger.py  main.py  middleware.py  qrRouters.py  services.py
core/attendance/: qrCode.py
db/: __init__.py  attendanceManager.py  connection.py  rateLimiter.py  redisClient.py  sessionManager.py  tokenManager.py
generator/: exportFile.py  qrCode.py
ui/: main.html
ui/student/: expired.html  form.html  form.js  student.html  student.js
ui/teacher/: teacher.html  teacher.js
utils/: export.py  generate.py
